# ai-berkeley-2025

./: .env.example  .gitignore  DISPATCH_SETUP.md  LETTA_SETUP.md  README.md  airport.json  messages.json  package-lock.json  package.json  setup.py
.next/: trace
.next/cache/: .rscinfo
be/: .env.example  .gitignore  Dockerfile  EMERGENCY_SYSTEM_README.md  Makefile  PROJECT_SUMMARY.md  README.md  dispatch_configs.json  dispatch_records.json  emergencies.json  emergency_protocols.json  env.example  messages.json  pyproject.toml  requirements.txt  server.py  setup.sh  setup_emergency_system.py  test_dispatch.py  test_emergency_detection.py  test_emergency_system.py  test_phraseology_formatter.py  test_simple_emergency.py  test_vapi_call.py
be/app/: __init__.py  config.py  main.py
be/app/agents/: __init__.py  airport_agent.py  asi_one_agent.py  atc_agent.py  emergency_agent.py  emergency_agent_simple.py  transcriber.py  vapi_voice_agent.py
be/app/api/: __init__.py  websocket.py
be/app/core/: __init__.py  atc_models.py  audio.py  mcp_integration.py  transcription.py
be/app/utils/: __init__.py  logging.py
be/scripts/: emergency_caller.py  enhanced_atc_system.py  run_atc_agent.py  setup_vapi_env.sh  start.py  test_vapi.py
be/src/: __init__.py  letta_service.py  vapi_service.py
be/src/atc_audio_agent/: __init__.py
be/src/atc_audio_agent/agents/: __init__.py  asi_one_agent.py  atc_language_agent.py  audio_agent.py
be/src/atc_audio_agent/core/: __init__.py  atc_agent.py  audio_processor.py  context_collector.py  mcp_bus.py  transcribe_groq.py  websocket_server.py
be/src/atc_audio_agent/integrations/: vapi_bridge.py
fe/: LETTA_CONFIG.md  README.md  next.config.ts  package-lock.json  package.json
(+44 files in other folders)
